# cpp-3d-engine

./: .gitignore  CMakeLists.txt  engine.cpp  game  main.cpp
engine/: camera.cpp  camera.h  object.cpp  object.h  shader.cpp  shader.h
engine/entity/: collision.cpp  collision.h  entity.cpp  entity.h
engine/utils/: imageBMP.cpp  imageBMP.h  model.cpp  model.h
include/: config.h  engine.h
include/engine/: camera.h  collision.h  collision_box.h  collision_sphere.h  entity.h  frustum.h  instance.h  object.h  scene.h  shader.h  world.h
include/engine/entity/: block.h  player.h
include/engine/object/: block.h  player.h
include/engine/traits/: positionable.h
include/utils/: imageBMP.h  model.h
shaders/: block.frag  block.vert  no-texture.frag  shader.frag  shader.vert  shaderOneColor.frag
src/: engine.cpp  main.cpp
src/engine/: camera.cpp  collision.cpp  collision_box.cpp  collision_sphere.cpp  entity.cpp  frustum.cpp  gravity.cpp  object.cpp  player.cpp  scene.cpp  shader.cpp  world.cpp
src/engine/entity/: block.cpp  player.cpp
src/engine/object/: block.cpp  player.cpp
src/engine/traits/: positionable.cpp
src/utils/: imageBMP.cpp  model.cpp
